@@ -379,6 +379,9 @@ main(int argc, char **argv)
 #endif
   
 #if 0
+  g_log_set_fatal_mask("GLib", // "Gtk" , // 
+  		       G_LOG_LEVEL_WARNING | G_LOG_LEVEL_CRITICAL); // G_LOG_LEVEL_WARNING
+  
   g_log_set_fatal_mask("GLib-GObject", // "Gtk" , // 
   		       G_LOG_LEVEL_WARNING | G_LOG_LEVEL_CRITICAL); // G_LOG_LEVEL_WARNING
 
